# oz_codingschool_assignment

./: Ch01.task.ipynb  Ch03_task.ipynb  Ch04_task(code).ipynb  자기소개.html
DataBase/14~20/: db1420.sql
DataBase/21~23/: 2223.sql  test_pymySQL.py
DataBase/30~32/: yes24.ipynb
DataBase/33~36/: 33~36.sql  yes24.ipynb
DataBase/41~48/: mongopy.ipynb
DataBase/7~13/: chapter07_13.ipynb
DataBasse/1~6/: chapter01_06.ipynb
admin-project/: admin.html  join.html  join.js
crawling/8.7/: test3.py  test4.py  test5.py
crawling/8.8/: test10.py
flask/12~21/: api.py  app.py
flask/1~11/: app.py
flask/22~31/part1/: app.py  db.py  pyproject.toml
flask/22~31/part1/instance/: data.db
flask/22~31/part1/routes/: board.py  user.py
flask/32~38/: app.py  db.yaml  posts_routes.py  pyproject.toml
linux/14~26/: linux_1426.ipynb
linux/1~13/: linux_0113(문제).ipynb
python/: Ch04_task(code).ipynb
python/05~09/: Ch07_task.ipynb  Ch08_task.ipynb  Chapter0508_과제 2.ipynb  Chapter0508_과제.ipynb
python/10~13/: Chapter0913_과제.ipynb
python/14~16/: Chapter1416_과제.ipynb
python/17~20/: Chapter1720_과제.ipynb
python/21~32/: Ch21_task.ipynb  Ch22_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  Ch25_task.ipynb  Ch26_task.ipynb  Ch27_task.ipynb  Ch28_task.ipynb  Ch29_task.ipynb  Ch30_task.ipynb  Ch31_task.ipynb  Ch32_task.ipynb  Challenge_task.ipynb
python/32~40/: __init__.py  birds.py  mammals.py  mymath.py  precious.py  (+9 more)
몬스터공격하기/: attackmonster.html
사용자정보 입력받기/: input.html
스타일입히기/: 스타일입히기.css
채팅방/: chating.css  chating.html
회원가입/: join.html  join.js
(+7 files in other folders)
