[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = ""
authors = ["jm-jung <jmsk7554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
sqlalchemy = "^2.0.31"
flask-sqlalchemy = "^3.1.1"
flask-mysqldb = "^2.0.0"
pyyaml = "^6.0.1"
flask-migrate = "^4.0.7"
flask-httpauth = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
